crates/ars-components/src/selection/tags_input/snapshots/ars_components__selection__tags_input__tests__snapshot_control_with_max.snap
---
source: crates/ars-components/src/selection/tags_input/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).control_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "control",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tags-input",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "tags-label",
            ),
        ),
        (
            Aria(
                Description,
            ),
            String(
                "1 of 3 tags",
            ),
        ),
        (
            Role,
            String(
                "grid",
            ),
        ),
    ],
    styles: [],
}
