crates/ars-components/src/selection/tags_input/snapshots/ars_components__selection__tags_input__tests__snapshot_error_message_visible.snap
---
source: crates/ars-components/src/selection/tags_input/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).error_message_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "error-message",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tags-input",
            ),
        ),
        (
            Aria(
                Live,
            ),
            String(
                "polite",
            ),
        ),
        (
            Id,
            String(
                "tags-error-message",
            ),
        ),
    ],
    styles: [],
}
