crates/ars-components/src/selection/tags_input/snapshots/ars_components__selection__tags_input__tests__snapshot_hidden_input.snap
---
source: crates/ars-components/src/selection/tags_input/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).hidden_input_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "hidden-input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tags-input",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
        (
            Name,
            String(
                "tags-field",
            ),
        ),
        (
            Type,
            String(
                "hidden",
            ),
        ),
        (
            Value,
            String(
                "a,b",
            ),
        ),
    ],
    styles: [],
}
