crates/ars-components/src/selection/tags_input/snapshots/ars_components__selection__tags_input__tests__snapshot_input_disabled_readonly.snap
---
source: crates/ars-components/src/selection/tags_input/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).input_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tags-input",
            ),
        ),
        (
            Aria(
                DescribedBy,
            ),
            String(
                "tags-description",
            ),
        ),
        (
            Id,
            String(
                "tags-input",
            ),
        ),
        (
            Disabled,
            Bool(
                true,
            ),
        ),
        (
            ReadOnly,
            Bool(
                true,
            ),
        ),
    ],
    styles: [],
}
